<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.formularioFragment">

        <RadioGroup
            android:id="@+id/Formulario"
            android:layout_width="350dp"
            android:layout_height="175dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/pesquisa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesquisa" />

            <RadioButton
                android:id="@+id/nada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nada" />

            <RadioButton
                android:id="@+id/obs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obs" />

            <RadioButton
                android:id="@+id/FA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ajuda" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="396dp"
            android:layout_height="175dp"
            android:layout_marginTop="32dp"
            android:text="@string/GPergunta"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/GResposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/responde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Formulario" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>